MMA-6445 Prefaktor av valideringstestar i journalpost-modulen
- Gjer testane likare kvarandre i struktur og sjekkar.
- Legg til litt fleire testar for å auke testdekning.
- Fleire parametriserte testar.
- Fiks testar som ikkje validerte feilmeldinga skikkeleg.